[gd_scene load_steps=7 format=2]

[ext_resource path="res://new_theme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/NotoMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/widgets/ReturnHomeButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/custom_menu.gd" type="Script" id=4]
[ext_resource path="res://scenes/widgets/LangSelectButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Control" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="Control"]
margin_right = 1024.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 131.0

[node name="ReturnHomeButton" parent="Control/Panel/HBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_right = 134.0
size_flags_stretch_ratio = 0.2

[node name="Ttile" type="Label" parent="Control/Panel/HBoxContainer"]
margin_left = 134.0
margin_right = 807.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "PARAM"
align = 1
valign = 1

[node name="LangSelectButton" parent="Control/Panel/HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 807.0
margin_right = 1010.0
margin_bottom = 124.0
size_flags_stretch_ratio = 0.3

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_top = 138.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IsPositionEnabled" type="CheckButton" parent="Control/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_right = 341.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "POS"
align = 1

[node name="IsSoundEnabled" type="CheckButton" parent="Control/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_left = 341.0
margin_right = 682.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SOUND"
align = 1

[node name="IsColorEnabled" type="CheckButton" parent="Control/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_left = 682.0
margin_right = 1024.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "COLOR"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 92.0
margin_right = 1024.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 512.0
margin_bottom = 92.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "n "
align = 1
valign = 1

[node name="InputN" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
value = 1.0
allow_greater = true
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 184.0
margin_right = 1024.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
margin_right = 512.0
margin_bottom = 93.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "DELAY"
align = 1
valign = 1

[node name="InputDelay" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 5.0
step = 0.1
value = 2.0
align = 1
suffix = " sec"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 277.0
margin_right = 1024.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_right = 512.0
margin_bottom = 92.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "TURNS"
align = 1
valign = 1

[node name="InputTurns" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
value = 20.0
allow_greater = true
align = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 369.0
margin_right = 1024.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="Control/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_right = 512.0
margin_bottom = 93.0
hint_tooltip = "TOOLTIPSAVEBUTTON"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SAVEAS"

[node name="OptionButton" type="OptionButton" parent="Control/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "DEMO_OPTION"
align = 1
items = [ "DEMO_OPTION", null, false, 0, null, "FAST_OPTION", null, false, 1, null, "NUP_OPTION", null, false, 2, null, "ALL_OPTION", null, false, 3, null ]
selected = 0
